Right align logo, tweak tab layout in css to accomodate (bug 452)

--- a/compliance/media/css/tabstyle.css
+++ b/compliance/media/css/tabstyle.css
@@ -19,7 +19,7 @@ body {
   }
 #header ul {
   margin:0;
-  padding:10px 10px 0;
+  padding:45px 10px 0;
   list-style:none;
   }
 #header li {
